# fastapi-guide

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: ping.py  users.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: user.py
app/schemas/: pagination.py  response.py  user.py
app/services/: user_service.py
